Fix alignment in list layout

--- a/packages/dataviews/src/layouts/list/style.scss
+++ b/packages/dataviews/src/layouts/list/style.scss
@@ -185,5 +185,9 @@
 
 	& + .dataviews-pagination {
 		justify-content: space-between;
+
+		.dataviews-pagination__page-selection {
+			margin-left: - $grid-unit-10; // Offset the padding applied to the SelectControl
+		}
 	}
 }
